queries.css
@media (max-width: 84em) {
  .hero {
    max-width: 120rem;
  }

  .headin-primary {
    font-size: 4.4rem;
  }
}

@media (max-width: 75em) {
  html {
    font-size: 56.25%;
  }

  .grid {
    column-gap: 4.8rem;
    row-gap: 6.4rem;
  }
  .headin-secondary {
    font-size: 3.6rem;
  }

  .heading-tertiary {
    font-size: 2.4rem;
  }

  .header {
    padding: 0 3.2rem;
  }

  .carousel-item img {
    height: 80vh; /* Adjust this value as needed for larger screens */
  }

  .main-nav-list {
    gap: 3.2rem;
  }
}

@media (max-width: 59em) {
  html {
    font-size: 50%;
  }

  .main {
    margin: 0 auto;
  }

  .hero {
    grid-template-columns: 1fr;
    padding: 0 8rem;
    gap: 6.4rem;
  }

  .hero-text-box {
    text-align: center;
  }

  .nume-miri {
    font-size: 7.4rem;
  }

  .cta {
    grid-template-columns: 3fr 2fr;
  }

  .cta-form {
    grid-template-columns: 1fr;
  }

  .btn--form {
    margin-top: 1.2rem;
  }

  .btn-mobile-nav {
    display: block;
  }

  .main-nav {
    background-color: rgba(255, 255, 255, 0.97);
    /*enabling absolute position overflows the element*/
    /* position: absolute; */
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    transform: translateX(100%);

    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 0.5s ease-in;

    opacity: 0;

    pointer-events: none;
    visibility: hidden;
  }

  .main-nav-list {
    flex-direction: column;
    gap: 4.8rem;
  }

  .main-nav:link,
  .main-nav:visited {
    font-size: 3rem;
  }
}

@media (max-width: 34rem) {
  .main {
    margin: 0 2.3rem;
    overflow-x: hidden;
  }
  .grid {
    row-gap: 4.8rem;
  }
  .grid--2-cols,
  .grid--3-cols,
  .grid--4-cols {
    grid-template-columns: 1fr;
  }

  .btn,
  .btn:link,
  .btn:visited {
    padding: 2.4rem 1.6rem;
  }
  .section-hero {
    padding: 2.4rem 0 6.4rem 0;
  }

  .section-despre-noi {
    max-width: 100%;
  }

  .hero {
    padding: 0 3.2rem;
  }

  .radu-img {
    grid-row: 4;
  }

  .cta {
    grid-template-columns: 1fr;
  }

  .cta-text-box {
    padding: 3.2rem;
  }

  .cta-img-box {
    height: 32rem;
    grid-row: 1;
  }

  .step-img-box {
    transform: translateY(2.4rem);
  }

  .carousel-control-prev,
  .carousel-control-next {
    width: 10%;
  }

  .carousel-item img {
    height: 70vh; /* Adjust this value as needed for larger screens */
  }


  .gallery {
    grid-template-columns: repeat(4, 1fr);
    gap: 1.2rem;
  }

  .btn--gallery {
    grid-column: span 4;
  }
  
}

